<resources>
    <string name="app_name">CHEX</string>

    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="password_again">Powtórz hasło</string>
    <string name="signIn">Zaloguj</string>
    <string name="forgotPasswordBtn">Zapomniałem hasło</string>
    <string name="registerBtn">Zarejestruj</string>

    <string name="wrong_credentials">Wrong username/password</string>
    <string name="connection_timeout">Connection timed out. Unable to connect to server</string>
    <string name="server_connection_err">Failed to connect to the server</string>

    <string name="there_is_no_place_in_area">W okolicy nie ma interesującego miejsca</string>
    <string name="unknown_error_occured">Wystąpił nieznany błąd</string>

    <string name="btnCheck">CHECK</string>
    <string name="btnResetPass">Resetuj hasło</string>

    <string name="firstname">Imię</string>
    <string name="lastname">Nazwisko</string>
    <string name="gender">Płeć</string>
    <string name="gender_male">Mężczyzna</string>
    <string name="gender_female">Kobieta</string>
    <string name="country">Kraj</string>


    <!--  HEADER  -->
    <string name="registration_header">Rejestracja</string>
    <string name="forgot_password_header">Zapomniałeś hasło?</string>

    <!--  MESSGAES   -->
    <string name="something_went_wrong">Coś poszło nie tak</string>
    <string name="email_not_found">Nie znaleziono takiego adresu email</string>

    <string name="email_cannot_be_empty">Pole email nie może być puste</string>
    <string name="email_is_not_email">Błedny adres email</string>
    <string name="password_cannot_be_empty">Hasło nie może być puste</string>
    <string name="passwords_are_not_the_same">Hasła nie są takie same</string>
    <string name="password_is_too_short">Hasło jest za krótkie. Min 6 znaków</string>
    <string name="first_name_cannot_be_empty">Pole imię nie może być puste</string>
    <string name="last_name_cannot_be_empty">Pole nazwisko nie może być puste</string>
    <string name="email_exists">Konto z takim adresem email już istnieje</string>

    <string name="account_is_inactive">Konto nie zostało aktywowane</string>


    <string name="activation_code_sent">Na adres %s został wysłany kod aktywacyjny</string>
    <string name="reset_password_info_sent">Na adres %s został wysłany link do resetowania hasła</string>

    <string name="take_a_photo">Zrób zdjęcie</string>
    <string name="choose_from_gallery">Wybierz z galerii</string>
    <string name="delete_photo">Usuń zdjęcie</string>
    <string name="write_something">Napisz coś ...</string>

    <string name="you_visited_male">Odwiedziłeś</string>
    <string name="you_visited_female">Odwiedziłaś</string>
    <string name="you_achieved_male">Zdobyłeś</string>
    <string name="you_achieved_female">Zdobyłaś</string>
    <string name="how_do_you_rate_this_place">Jak oceniasz to miejsce?</string>
    <string name="exp">Exp: </string>

    <!-- btn -->
    <string name="btnCancel">Anuluj</string>
    <string name="btnChange">Zmień</string>
    <string name="btn_next">Dalej</string>
    <string name="btn_publish">Publikuj</string>
    <string name="btn_post_more">Więcej...</string>
    <string name="btn_expand">Rozwiń...</string>

    <!--  Create Post  -->
    <string name="label_add_something_from_you">Dodaj coś od siebie</string>
    <string name="label_user_photo">Zdjęcie użytkownika</string>
    <!--  Posts  -->
    <string name="label_achieved">zdobył</string>
    <string name="msg_region_visited_first_time">Oraz pierwszy raz odwiedził region:</string>
    <string name="msg_achievement_achieved">Nowe osiągnięcie zdobyte:</string>

</resources>