<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_scrollview_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg">

    <LinearLayout
        android:id="@+id/registration_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_grey"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/registration_header"
                android:textColor="@color/super_light_grey"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="?attr/colorError"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@string/password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/password2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_again"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/password_again"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/firstname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lastname_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/female_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_female" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <AutoCompleteTextView
                android:id="@+id/countryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/country"
                android:padding="5dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/country_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/send_form_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerBtn" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>